libs/@local/hashql/ast/tests/ui/lowering/special-form-expander/access-field-index-out-of-bounds.jsonc
//@ run: fail
//@ description: Field index out of bounds should error
["::kernel::special_form::access", "data", { "#literal": 18446744073709551616 }]
//~^ ERROR Use a valid field index within usize bounds
